--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 
+body {
+  background-color: #002f87;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
