--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,14 @@ body {
   background-color: #002f87;
 }
 
-h1 {
+h1, h2, h3{
   color: white;
   text-align: center;
+  font-family: aboreto; 
 }
 
 p {
-  font-family: verdana;
+  font-family: veranda;
   font-size: 20px;
+  color: white; 
 }
