--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,17 @@ body {
   background-color: #002f87;
 }
  
-h1, h2, h3{
+h1{
+  color: white;
+  text-align: center;
+  font-family: aboreto; 
+}
+h3{
+  color: white;
+  text-align: center;
+  font-family: aboreto; 
+}
+h2{
   color: white;
   text-align: center;
   font-family: aboreto; 
