--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,12 @@ body {
   background-color: #002f87;
 }
  
-h1{
+h1,h2,h3{
   color: white;
   text-align: center;
   font-family: aboreto; 
 }
-h3{
-  color: white;
-  text-align: center;
-  font-family: aboreto; 
-}
-h2{
-  color: white;
-  text-align: center;
-  font-family: aboreto; 
-}
+
 
 p {
   font-family: veranda;
@@ -28,5 +19,5 @@ p {
 li {
   font-family: veranda; 
   font-size: 20px; 
-  font-color: white; 
+  color: white; 
 } 
