--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 
 body {
   background-color: #002f87;
+  line-height: 1.6; 
+  padding: 20 px; 
 }
  
 h1,h2,h3{
@@ -10,9 +12,13 @@ h1,h2,h3{
 }
 
 li, a, p {
-  font-family: veranda; 
-  font-size: 20px; 
+  font-family: Verdana, sans-serif; 
+  font-size: 1 em; 
   color: white; 
   text-decoration:none;
-
 } 
+a:hover {
+  text-decoration: underline;
+  color: #ffdd57; 
+}
+
