--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,8 @@ a:hover {
   transform: scale(1.05); 
 }
 
+.announcement { 
+text-align: center; 
+padding-left: 20 px; 
+padding-right: 20 px; 
+} 
