--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ body {
 h1,h2,h3{
   color: white;
   text-align: center;
-  font-family: aboreto; 
+  font-family: "Aboreto", system-ui;
+
 }
 
 li, a, p {
