--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ li, a, p {
   font-family: Verdana, sans-serif; 
   font-size: 1 em; 
   color: white; 
+  text-decoration: none; 
 } 
 
 a:hover {
