--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,11 @@ a:hover {
   transform: scale(1.05); 
 }
 
-#announcement { 
-text-align: center; 
-padding-left: 40 px; 
-padding-right: 40 px; 
-padding-bottom: 30 px; 
-} 
+.announcement {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px 40px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.05);
+  border-radius: 8px;                           
+}
